--- a/css/style.sass
+++ b/css/style.sass
@@ -57,6 +57,9 @@ section
         border: solid 1px red
         max-width: 920px
 
+    h1  
+        font-size: 60px
+
 .gallery
     max-width: 760px
     margin: auto
@@ -91,7 +94,7 @@ section
 .player
     float: left
     height: auto
-    width: 40%
+    width: 50%
     border: solid 1px red
 
     text-align: left
