--- a/css/style.sass
+++ b/css/style.sass
@@ -54,11 +54,13 @@ section
         font-size: 100px
 
     .bodyContainer 
-        border: solid 1px red
-        max-width: 920px
+        max-width: 1200px
+        margin-left: 3%
+        width: 1200px
 
     h1  
-        font-size: 60px
+        font-size: 80px
+        margin-bottom: 0px
 
 .gallery
     max-width: 760px
@@ -86,32 +88,49 @@ section
     margin: 5px 0
 
 .players
+    display: grid
+    grid-template-columns: repeat(2,1fr)
+    grid-gap: 5px
     margin-top: 5px
     width: 100%
-    border: solid 1px red
     height: auto
 
 .player
     float: left
     height: auto
-    width: 50%
-    border: solid 1px red
-
+    width: 100%
     text-align: left
     h1 
         margin-top: 5px
-    margin: 0 3% 0 3% 
+    margin: 0 3% 0 1% 
     .imgwrapper
         max-width: 420px
         img 
             width: 100%
             height: auto
 
+.player2
+    margin-left: -10%
 
+.stats
+    margin-top: -10px
+
+.nonCentered
+    text-align: left
+    margin-bottom: 3%
 
 .intro 
-    margin: 10px
+    margin-left: 5px
     text-align: left
+    max-width: 1100px
+
+.mediumH1
+    font-size: 60px
+    margin-bottom: 1%
+
+p 
+    font-size: 2em
+
 aside
     padding: 5px
 
@@ -404,6 +423,9 @@ input
 
 
 @media screen and (max-width: 700px) 
+    .players
+        grid-template-columns: repeat(1fr, 1)
+        
 
     section 
         .motto
