--- a/css/style.sass
+++ b/css/style.sass
@@ -55,11 +55,13 @@ section
 
     .bodyContainer 
         max-width: 1200px
-        margin-left: 3%
-        width: 1200px
+        padding-left: 3%
+        width: 100%
 
     h1  
-        font-size: 80px
+        margin: 0 auto
+        width: fit-content
+
         margin-bottom: 0px
 
 .gallery
@@ -93,7 +95,7 @@ section
     grid-gap: 5px
     margin-top: 5px
     width: 100%
-    height: auto
+    height: fit-content
 
 .player
     float: left
@@ -106,11 +108,11 @@ section
     .imgwrapper
         max-width: 420px
         img 
-            width: 100%
+            max-width: 100%
             height: auto
 
 .player2
-    margin-left: -10%
+    
 
 .stats
     margin-top: -10px
@@ -189,7 +191,7 @@ label
     width: 100%
 
 input
-    width: 70%
+    width: 100%
 
 .error, .msg
     width: fit-content
@@ -441,15 +443,13 @@ input
 
 
 @media screen and (max-width: 700px) 
-    .players
-        grid-template-columns: repeat(1fr, 1)
-        
 
-    section 
-        .motto
-                font-size: 60px
-
-
+    .mediumH1
+        font-size: 35px
+    h1 
+        font-size: 40px
+    p
+        font-size: 20px
     .topnav a 
         display: none
     .topnav a.icon 
@@ -469,8 +469,7 @@ input
         margin: 0
         width: 100%
     
-    .container
-        width: 100%
+
     header
         display: grid
         width: 100%
@@ -487,7 +486,30 @@ input
         img
             height: 150px
 
+    section, .s1
+        .bodyContainer
+            padding: 0
+        padding: 5%
+        width: 100%
+        
+    section .motto
+        font-size: 60px
+
 @media screen and (max-width: 765px)
     .topnav
         a
             font-size: 1.75em
+@media screen and (max-width: 980px)
+    .players
+        display: grid
+        grid-template-columns: repeat(1,1fr)
+        grid-gap: 5px
+        margin-top: 5px
+        width: 100%
+        height: fit-content
+        .player
+            float: none
+            margin: auto
+            text-align: center
+            .imgwrapper
+                margin: auto
