--- a/css/style.sass
+++ b/css/style.sass
@@ -164,6 +164,9 @@ label
 input
     width: 70%
 
+.contact
+    padding-top: 50px
+
 
 .eventItem
     height: auto
@@ -192,20 +195,20 @@ input
     grid-template-areas: "coming notComing"
 
 .day
-    margin: 0 0 0 10px
+    margin: 0 0 0 15px
     float: left
     clear: both
     font-size: 2em
     
 .month
-    margin: 0 0 0 10px
+    margin: 0 0 0 15px
     float: left
     clear: both
 
 .daycount
     float: left
     clear: both
-    margin: 5px
+    margin: 5px 5px 5px 15px
 
 .date
     float: left
