--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ section h1 {
 }
 
 .gallery {
-  max-width: 760px;
+  max-width: 1020px;
   margin: auto;
   border: white solid 3px;
   background: white;
@@ -140,19 +140,25 @@ section h1 {
 }
 
 .nonCentered {
-  text-align: left;
-  margin-bottom: 3%;
+  margin-left: 0em;
 }
 
 .intro {
   margin-left: 5px;
   text-align: left;
   max-width: 1100px;
+  float: left;
+}
+
+.introH1 {
+  font-size: 3.7em;
+  margin-left: 0em;
 }
 
 .mediumH1 {
-  font-size: 60px;
+  font-size: 5em;
   margin-bottom: 1%;
+  text-align: left;
 }
 
 p {
