--- a/css/style.sass
+++ b/css/style.sass
@@ -65,7 +65,7 @@ section
         margin-bottom: 0px
 
 .gallery
-    max-width: 760px
+    max-width: 1020px
     margin: auto
     border: white solid 3px
     background: white
@@ -118,19 +118,24 @@ section
     margin-top: -10px
 
 .nonCentered
-    text-align: left
-    margin-bottom: 3%
+    margin-left: 0em
 
 .intro 
     margin-left: 5px
     text-align: left
     max-width: 1100px
+    float: left
+
+.introH1
+    font-size: 3.7em
+    margin-left: 0em
 
 .mediumH1
-    font-size: 60px
+    font-size: 5em
     margin-bottom: 1%
+    text-align: left
 
-p 
+p
     font-size: 2em
 
 aside
