--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@ header nav a:hover {
   background-color: #555;
   color: white;
 }
+header nav a:active {
+  background-color: #4CAF50;
+}
 header img {
   max-height: 200px;
   width: auto;
