--- a/css/style.sass
+++ b/css/style.sass
@@ -38,6 +38,8 @@ header
         a:hover
             background-color: #555
             color: white
+        a:active
+            background-color: #4CAF50 
     img 
         max-height: 200px
         width: auto
