--- a/css/style.sass
+++ b/css/style.sass
@@ -131,6 +131,32 @@ section
 .introH1
     font-size: 3.7em
     margin-left: 0em
+.deleteUserButton
+    width: 100%
+    background: transparent
+
+    border-radius: 6px
+    border: none
+    color: white
+    padding: 2px
+    text-align: center
+    display: inline-block
+    font-size: 16px
+    margin: 4px 2px
+    -webkit-transition-duration: 0.4s
+    transition-duration: 0.4s
+    cursor: pointer
+    text-decoration: none
+    text-transform: uppercase
+    color: black
+    border: 2px solid #FF0000
+.deleteUserButton:hover 
+    background-color: #FF0000
+    color: white
+
+.removeLink
+    text-decoration: none
+    color: inherit
 
 .mediumH1
     font-size: 5em
