--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ section h1 {
   margin-top: 5px;
 }
 .player .imgwrapper {
+  margin-bottom: 0px;
   max-width: 420px;
 }
 .player .imgwrapper img {
@@ -136,7 +137,9 @@ section h1 {
 }
 
 .stats {
-  margin-top: -10px;
+  margin-top: 0px;
+  width: auto;
+  max-width: 90%;
 }
 
 .nonCentered {
@@ -151,8 +154,9 @@ section h1 {
 }
 
 .introH1 {
-  font-size: 3.7em;
+  font-size: 3.5em;
   margin-left: 0em;
+  margin-bottom: 3px;
 }
 
 .mediumH1 {
@@ -543,7 +547,7 @@ input {
 }
 
 @media screen and (max-width: 700px) {
-  .mediumH1 {
+  .mediumH1, .introH1 {
     font-size: 35px;
   }
 
@@ -617,12 +621,49 @@ input {
     font-size: 60px;
   }
 }
+@media screen and (max-width: 470px) {
+  .player {
+    margin-left: 0px;
+    padding-left: 0px;
+  }
+
+  p.stats {
+    max-width: 50%;
+    margin-left: 0px;
+    text-align: left;
+    font-size: 1.5em;
+  }
+
+  h1.introH1 {
+    float: none;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: auto;
+    margin-left: 0px;
+    margin-bottom: 3px;
+  }
+
+  h1.mediumH1 {
+    text-align: left;
+  }
+}
 @media screen and (max-width: 765px) {
   .topnav a {
     font-size: 1.75em;
   }
 }
 @media screen and (max-width: 980px) {
+  .section {
+    width: 100%;
+    margin: 0px;
+  }
+
+  h1.mediumH1 {
+    text-align: center;
+    font-size: 60px;
+  }
+
   .players {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -634,11 +675,22 @@ input {
     height: fit-content;
   }
   .players .player {
+    width: auto;
     float: none;
     margin: auto;
     text-align: center;
   }
   .players .player .imgwrapper {
     margin: auto;
+  }
+  .players .player img {
+    width: 100%;
+    margin: 0px 3px 0px 0px;
+  }
+  .players .player p.stats {
+    font-size: 1.7em;
+    max-width: 100%;
+    margin-left: 0px;
+    text-align: left;
   }
 }
