--- a/css/style.sass
+++ b/css/style.sass
@@ -28,7 +28,7 @@ header
     grid-template-areas: "logo nav nav"
     color: white
     padding: 5px
-    background-color: rgba(255, 165, 0, .7)
+    background-color: rgba(255, 150, 33, 0.87)
 
 
     nav
@@ -46,7 +46,7 @@ section
     width: auto
     min-height: 650px
     padding: 5px
-    background-color: rgba(255, 165, 0, .7)
+    background-color: rgba(255, 150, 33, 0.87)
     text-align: center
 
 
