--- a/css/style.sass
+++ b/css/style.sass
@@ -206,6 +206,13 @@ input[type=text],input[type=email] ,input[type=password] , select
     display: inline-block
     border: 1px solid #ccc
     border-radius: 4px
+textarea 
+    padding: 12px 20px
+    margin: 10px 0 8px
+    display: inline-block
+    border: 1px solid #ccc
+    border-radius: 4px
+    
 .formbutton
     min-width: 120px
     width: 33%
@@ -474,6 +481,28 @@ input
 
 .topnav .icon 
     display: none
+
+.newsList
+    width: 75%
+    margin: auto
+    h1 
+        width: fit-content
+        margin: auto 0
+        font-size: 70px
+    .newsItem
+        text-align: left
+        .news0
+            display: none
+        .news1 p
+            font-size: 15px
+            margin-bottom: 5px
+        .news2 p
+            font-size: 25px
+            margin: 5px 0
+        .news3 p
+            font-size: 20px
+            line-height: 1.4
+            margin: 10px 0
 
 
 @media screen and (max-width: 870px) 
