--- a/css/style.css
+++ b/css/style.css
@@ -672,6 +672,23 @@ input {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+@media screen and (min-width: 471px) {
+  @-webkit-keyframes fadeIn {
+    to {
+      opacity: 1;
+    }
+  }
+  @keyframes fadeIn {
+    to {
+      opacity: 1;
+    }
+  }
+  .fade-in {
+    opacity: 0;
+    -webkit-animation: fadeIn 0.5s ease-in 1 forwards;
+            animation: fadeIn 0.5s ease-in 1 forwards;
+  }
+}
 @media screen and (max-width: 900px) {
   .topnav a {
     font-size: 1.5em;
