--- a/css/style.css
+++ b/css/style.css
@@ -689,6 +689,14 @@ input {
     font-size: 1.5em;
   }
 
+  .newslist h1 {
+    font-size: 20px;
+  }
+
+  h1.motto {
+    font-size: 30px;
+  }
+
   h1.introH1 {
     float: none;
     width: -webkit-fit-content;
@@ -701,6 +709,7 @@ input {
 
   h1.mediumH1 {
     text-align: left;
+    font-size: 10em;
   }
 
   #current {
