--- a/css/style.sass
+++ b/css/style.sass
@@ -566,6 +566,12 @@ input
         margin-left: 0px
         text-align: left
         font-size: 1.5em
+
+    .newslist h1
+        font-size: 20px
+
+    h1.motto
+        font-size: 30px
     
     h1.introH1
         float: none
@@ -576,6 +582,7 @@ input
     
     h1.mediumH1
         text-align: left
+        font-size: 10em
 
     #current
             display: none
