--- a/css/style.sass
+++ b/css/style.sass
@@ -69,7 +69,7 @@ section
 .gallery
     max-width: 1020px
     margin: auto
-    border: white solid 3px
+    padding: 3px
     background: white
 
 .main-img img, .images img
@@ -450,7 +450,7 @@ input
     grid-area: buttons
     form
         display: inline
-        float: center
+
 
 .editButton
     width: 45%
