--- a/css/style.sass
+++ b/css/style.sass
@@ -7,6 +7,9 @@ body
     background-size: 100%
     font-family: 'Work Sans', sans-serif
 
+.tablediv
+    overflow-x: auto
+
 .container
     
     height: 100%
