--- a/css/style.sass
+++ b/css/style.sass
@@ -558,6 +558,10 @@ input
         margin: 0
         width: 100%
     
+    .tablediv
+        margin: 0 auto
+        max-width: 80%
+  
 
     header
         display: grid
